solve issues scanned by sonar